Fixed clock text alignment

--- a/display/style.css
+++ b/display/style.css
@@ -56,6 +56,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
 }
 
 .date {
